Revert "Fix voice message duration text color in dark mode (#1959)"
This reverts commit 43f41e99a7e0d5fe4356057e2ac059203541bfc7.

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -169,11 +169,6 @@ html.dark-mode ._9xq0 {
 	--primary-text: #e4e6eb;
 }
 
-/* Message list: Voice messages duration text color */
-html.dark-mode .x6s0dn4.x14hiurz.xfj52jq.xykzs3s.x17xv1ja.x1mvicbb.x1mqxbix.x78zum5.x1nxh6w3.x1s688f.xi0exxh.xl56j7k.x1w0mnb.x1mnrxsn.x1n2onr6.x87ps6o.x1r9kitl {
-	color: var(--primary-text) !important;
-}
-
 /* Radio buttons */
 .x14yjl9h.xudhj91.x18nykt9.xww2gxu.x13fuv20.xu3j5b3.x1q0q8m5.x26u7qi.xamhcws.xol2nv.xlxy82.x19p7ews.x9f619.x1rg5ohu.x2lah0s.x1n2onr6.x1tz4bnf.xmds5ef.x25epmt.x11y6y4w.xxk0z11.xvy4d1p {
 	--accent: var(--primary-text);
